<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/editSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:onClick="saveToDatabase"
        android:text="@string/save_button"
        android:background="#ffffff"
        android:textColor="#FF37BAC9"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="422dp" />

    <TextView
        android:id="@+id/editContactName"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="59dp"
        android:text="@string/new_contact_name"
        android:textColor="#37bac9"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="45dp" />

    <EditText
        android:id="@+id/editContactNameInput"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editContactName"
        android:layout_marginTop="93dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#099bea"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="84dp"
        android:background="@drawable/square_edit_text"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_person_grey_24dp"/>

    <TextView
        android:id="@+id/editPhoneNumber"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editContactName"
        android:layout_marginTop="172dp"
        android:text="@string/new_phone_number"
        android:textColor="#37bac9"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="362dp" />

    <EditText
        android:id="@+id/editPhoneNumberInput"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editContactName"
        android:layout_marginTop="209dp"
        android:ems="10"
        android:inputType="phone"
        android:textColor="#099bea"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="275dp"
        android:background="@drawable/square_edit_text"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_local_phone_grey_24dp"/>

    <TextView
        android:id="@+id/editEmail"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editContactName"
        android:layout_marginTop="296dp"
        android:text="@string/new_email"
        android:textColor="#37bac9"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="362dp" />

    <EditText
        android:id="@+id/editEmailInput"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editContactName"
        android:layout_marginBottom="287dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#099bea"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="275dp"
        android:background="@drawable/square_edit_text"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_email_grey_24dp"/>

    <TextView
        android:id="@+id/editUrCompany"
        android:layout_width="353dp"
        android:layout_height="33dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editContactName"
        android:layout_marginBottom="225dp"
        android:textColor="#37bac9"
        android:textSize="18sp"
        android:text="@string/new_company" />

    <EditText
        android:id="@+id/editUrCompanyInput"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editContactName"
        android:layout_marginBottom="173dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#099bea"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="275dp"
        android:background="@drawable/square_edit_text"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_business_grey_24dp"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:background="@drawable/ic_delete_forever_black_24dp"
        android:onClick="deleteFromDB" />

</RelativeLayout>